<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/wave_channel"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/WiFi_Channel_Text"
            android:paddingTop="10dip"/>

        <Spinner
            android:id="@+id/wave_channel_spinner"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:prompt="@string/WiFi_Channel_Text"
            android:entries="@array/channels_20m"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/digital_gain_text"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/wifi_wave_digital_gain"
            android:paddingTop="10dip"/>

        <Spinner
            android:id="@+id/digital_gain_spinner"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:prompt="@string/wifi_wave_digital_gain"
            android:entries="@array/wifi_wave_digital_gain"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/rf_gain_text"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/wifi_wave_rf_gain"
            android:paddingTop="10dip"/>

        <Spinner
            android:id="@+id/rf_gain_spinner"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:prompt="@string/wifi_wave_rf_gain"
            android:entries="@array/wifi_wave_rf_gain"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="80dip">

        <Button android:text="@string/WiFi_Start"
            android:id="@+id/WiFi_Wave_Start"
            android:layout_width="120dip"
            android:layout_height="wrap_content">
        </Button>

        <Button android:text="@string/WiFi_Stop"
            android:id="@+id/WiFi_Wave_Stop"
            android:layout_width="120dip"
            android:layout_height="wrap_content" >
        </Button>
    </LinearLayout>
</LinearLayout>
